--- a/styles/style.css
+++ b/styles/style.css
@@ -1,335 +1,396 @@
-main {
-  display: flex;
-  flex-direction: column;
-  gap: 183px;
-}
-
-.content-section {
-  width: 100%;
-  margin: 0 auto;
-}
-
 .header {
-  display: grid;
-  grid-template-columns: 1.51fr 2fr 1.5fr;
-  align-items: center;
-  padding: 92px 51px 89px;
-}
-
-.header__links-list {
-  display: flex;
-  gap: 32px;
-}
-
-.header__links-list-item {
-  list-style: circle;
-}
-
-.header__links-list-item_no-bullit {
-  list-style: none;
-}
-
-.header__link {
-  font-size: 18px;
-  white-space: nowrap;
-}
-
-.text-link:hover {
-  background-color: #000000;
-  color: #FFF;
-}
-
-.header__link_active {
-  text-decoration: none;
-}
-
-.header__logo {
-  display: block;
-  justify-self: center;
-  align-self: center;
-  width: 140px;
-}
-
-.header__logo-image {
-  width: 100%;
-}
-
-.address {
-  font-style: inherit;
-}
-
-.header__address {
-  justify-self: end;
-  font-style: inherit;
-}
-
-.address__item {
-  display: block;
-  font-size: 18px;
-  line-height: 1.35;
-  text-underline-position: under;
-}
-
-.address__address-text {
-  font-size: 18px;
-  line-height: 1.35;
-}
-
-.cover {
-  position: relative;
-  padding: 165px 50px 50px 50px;
-  background-image: url(../images/cover.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.6000000238418579;
-  background-color: #000000;
-}
-
-.cover__title {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  color: #FFF;
-  font-weight: bold;
-  font-size: 100px;
-  line-height: 1.15;
-  letter-spacing: 30px;
-  text-transform: uppercase;
-}
-
-.aligned-text {
-  display: block;
-}
-
-.aligned-text_center {
-  line-height: 1;
-  text-align: center;
-}
-
-.aligned-text_right {
-  line-height: 1;
-  text-align: right;
-}
-
-.letter-spacing-extended {
-  letter-spacing: 60px;
-}
-
-/* Убирает ненужный отступ в конце слова, создаваемый свойством letter-spacing всего элемента */
-
-.remove-spacing {
-  letter-spacing: normal;
-}
-
-.cover__description {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 78px;
-  padding: 136px 0 0;
-}
-
-.cover__description-text {
-  color: #FFF;
-  font-size: 22px;
-  line-height: 1.27;
-  text-transform: uppercase;
-  word-spacing: 18px;
-}
-
-.bet-button {
-  border: 1px #FFF solid;
-  padding: 14px 32px;
-  color: #FFF;
-  font-family: 'Raleway', sans-serif;
-  font-weight: normal;
-  font-size: 22px;
-  line-height: 1;
-  text-transform: uppercase;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.bet-button:hover {
-  color: #000000;
-  background-color: #FFF;
-}
-
-.lots {
-  padding: 0 50px;
-}
-
-.lots__heading {
-  padding: 0 0 30px 40px;
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 1;
-  text-transform: uppercase;
-}
-
-.lots__card-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 25px;
-  list-style: none;
-}
-
-.lost__card-list-item {
-  height: 100%;
-}
-
-.card-link {
-  display: block;
-  height: 100%;
-}
-
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 30px;
-  width: auto;
-  height: 100%;
-  padding: 50px 40px;
-}
-
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.card__title {
-  position: relative;
-  z-index: 1;
-  color: #FFF;
-  font-weight: bold;
-  font-size: 22px;
-  line-height: 1.2;
-  text-decoration-line: underline;
-  text-transform: uppercase;
-}
-
-.card__text {
-  position: relative;
-  z-index: 1;
-  color: #FFF;
-  font-size: 20px;
-  line-height: 1.2;
-}
-
-.lots__look-more-link {
-  display: block;
-  margin: 30px 0 0 40px;
-  font-size: 20px;
-  text-decoration-line: underline;
-  text-underline-position: under;
-  width: fit-content;
-}
-
-.about {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 24px;
-  padding: 0 50px;
-}
-
-.about__column {
-  justify-self: center;
-}
-
-.about__column_text {
-  grid-column: 2/4;
-}
-
-.about__logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
-  background-color: #000000;
-}
-
-.about__logo-image {
-  width: 148px;
-}
-
-.about__title {
-  padding: 100px 0 104px;
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 1;
-  text-transform: uppercase;
-}
-
-.about__text {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-}
-
-.about__text p {
-  font-size: 20px;
-  line-height: normal;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 180px 50px 80px;
-}
-
-.footer__social-icon {
-  width: auto;
-  height: 48px;
-}
-
-.footer__menu-list {
-  text-align: center;
-  list-style: none;
-}
-
-.footer__menu-link {
-  font-size: 18px;
-  line-height: normal;
-  text-underline-position: under;
-}
-
-
-.footer__menu-link_active {
-  text-decoration: none;
-}
-
-.footer__social-list {
-  display: flex;
-  gap: 48px;
-  list-style: none;
-}
+    display: grid;
+    grid-template-columns: 1.51fr 2fr 1.5fr;
+    align-items: center;
+    margin: 92px 50px 105px 50px;
+    height:90px;
+  }
+  
+  .header__menu {
+    display: flex;
+    align-items: center;
+  }
+  
+  .header__links-list {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    list-style: circle;
+    padding-right: 47px;
+  }
+  
+  .header__links-list-item {
+    font-weight: 400;
+    font-size: 18px;
+    text-underline-offset: 4px;
+    list-style: circle;
+  }
+  
+  .header__links-list-item_no-bullit {
+    list-style: none;
+  }
+  
+  .header__link_active,
+  .header__link {
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    font-style: normal;
+    line-height: normal;
+    text-decoration: none;
+    white-space: nowrap;
+  }
+  
+  .header__link {
+    border-bottom: 1px solid black;
+  }
+  
+  .header__link_active {
+    border-bottom: none;
+  }
+  
+  .header__logo {
+    display: block;
+    align-self: center;
+    width: 130px;
+    height: 105px;
+  }
+  
+  .header__logo-image {
+    width: 100%;
+  }
+  
+  .address {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 240px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: inherit;
+    line-height: 1.35;
+  }
+  
+  .header__address {
+    justify-self: end;
+    font-style: inherit;
+  }
+  
+  .mail-address,
+  .phone-address {
+    display: flex;
+    align-self: flex-start;
+    border-bottom: 0.5px solid black;
+    text-decoration: none;
+  }
+  
+  .text-link:hover {
+    color: #fff;
+    background-color: #000;
+  }
+  
+  .cover {
+    background-image: url(../images/cover.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 757px;
+  }
+  
+  .overlay {
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 757px;
+  }
+  
+  .cover__title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    padding-top: 165px;
+    text-transform: uppercase;
+  }
+  
+  .aligned-text_right,
+  .aligned-text_center,
+  .aligned-text {
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 100px;
+    font-style: normal;
+    letter-spacing: 30px;
+  }
+  
+  .aligned-text {
+    margin-left: 50px;
+  }
+  
+  .aligned-text_center {
+    align-self: center;
+    margin: 0 78px 0 110px;
+  }
+  
+  .aligned-text_right {
+    align-self: flex-end;
+    margin-right: 20px;
+  }
+  
+  .cover__description {
+    display: flex;
+    justify-content: space-between;
+    margin: 105px 50px 0 50px;
+    padding-bottom: 50px;
+  }
+  
+  .bet-button,
+  .cover__description-text {
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    font-style: normal;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
+  .cover__description-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    word-spacing: 20px;
+  }
+  
+  .bet-button {
+    display: flex;
+    border: 1px solid #fff;
+    padding: 12px 32px;
+    background: none;
+  }
+  
+  .lots {
+    flex-shrink: 0;
+    margin: 180px 0 0 0;
+    padding: 0 24px;
+  }
+  
+  .lots__heading {
+    margin-bottom: 27px;
+    margin-left: 40px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+  }
+  
+  .lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 25px;
+    margin: 0 auto;
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  .lots__card-list-item {
+    flex-grow: 1;
+    max-width: 334px;
+    min-height: 596px;
+  }
+  
+  .card-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+  }
+  
+  .card {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 51px 40px 48px;
+    background-position: center;
+    background-size: cover;
+  }
+  
+  .card .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  
+  .card__title,
+  .card__text {
+    position: relative;
+    z-index: 2;
+  }
+  
+  .card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+  }
+  
+  .card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+  }
+  
+  .card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+  }
+  
+  .card__title {
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+    font-style: normal;
+    line-height: 120%;
+    text-decoration-line: underline;
+    text-transform: uppercase;
+  }
+  
+  .card__text {
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 120%;
+  }
+  
+  .lots__look-more-link {
+    margin-top: 30px;
+    margin-left: 40px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    font-style: normal;
+    line-height: normal;
+    text-decoration: none;
+  }
+  
+  .lots__look-more-link-text {
+    border-bottom: 1px solid black;
+    text-decoration: none;
+  }
+  
+  .about {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 24px;
+    margin: 155px 22px 184px 50px;
+  }
+  
+  .about__column {
+    display: contents;
+  }
+  
+  .about__logo {
+    display: flex;
+    grid-column: 1;
+    justify-self: center;
+    width: 240px;
+    height: 240px;
+    border-radius: 120px;
+    background-color: #000;
+  }
+  
+  .about__title-and-text-wrapper {
+    display: grid;
+    grid-column: 2 / 4;
+    row-gap: 30px;
+    width: 693px;
+    height: 449px;
+    margin: 101px 0 0 25px;
+  }
+  
+  .about__logo-image {
+    display: grid;
+    align-self: center;
+    width: 148px;
+    height: 114px;
+    margin-left: 46px;
+  }
+  
+  .about__title {
+    margin-bottom: 70px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+  }
+  
+  .about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 23px;
+  }
+  
+  .about__text p {
+    margin: 0;
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 50px 90px 50px;
+  }
+  
+  .footer__menu {
+    display: grid;
+    justify-items: center;
+    align-content: start;
+  }
+  
+  .footer__menu-list {
+    list-style-type: none;
+  }
+  
+  .footer__menu-link {
+    display: grid;
+    align-self: center;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    font-style: normal;
+    line-height: normal;
+    text-align: center;
+  }
+  
+  .footer__menu-link_active {
+    text-decoration: none;
+  }
+  
+  .footer__social-list {
+    display: flex;
+    gap: 48px;
+    list-style-type: none;
+  }
+  
+  .footer__social-icon {
+    width: 48px;
+  }
